# fluido

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  coverage.yml
e2e-tests/: Cargo.toml
e2e-tests/src/: cli.rs  harness.rs  main.rs  manifest.rs  run.rs  util.rs
e2e-tests/src/tests/mix_full_concentration_two_fluids/: test.toml
fluido/: Cargo.toml
fluido-core/: Cargo.toml
fluido-core/src/: lib.rs
fluido-generation/: Cargo.toml
fluido-generation/src/: lib.rs
fluido-ir/: Cargo.toml
fluido-ir/src/: graph.rs  ir.rs  ir_builder.rs  lib.rs  pass_manager.rs
fluido-ir/src/analysis/: liveness.rs
fluido-ir/src/regalloc/: interference_graph.rs
fluido-parse/: Cargo.toml
fluido-parse/src/: mixlang.pest  parser.rs
fluido-types/: Cargo.toml
fluido-types/src/: concentration.rs  error.rs  expr.rs  fluid.rs  lib.rs  number.rs
fluido/src/: cmd.rs  main.rs
mixer-generator/: Cargo.toml
mixer-generator/src/: lib.rs
mixer-graph/: Cargo.toml
mixer-graph/src/: graph.rs  lib.rs  parse.rs
mixer-ir/: Cargo.toml
mixer-ir/src/: graph.rs  ir.rs  ir_builder.rs  lib.rs  pass_manager.rs
mixer-ir/src/analysis/: liveness.rs
mixer-ir/src/regalloc/: interference_graph.rs  mod.rs
src/: concentration.rs  main.rs
