[package]
name = "fluido-ir"
version = "0.0.0"
edition = "2021"

[dependencies]
fluido-generation= { path = "../fluido-generation/" }
fluido-types = { path = "../fluido-types/" }
petgraph = "0.6.4"
z3 = { version = "0.12", features = ["static-link-z3"] }

[dev-dependencies]
fluido-parse = { path = "../fluido-parse/" }
