[package]
name = "fluido"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
fluido-types = { path = "../fluido-types/" }
mixer-generator = { path = "../mixer-generator/" }
fluido-parse = { path = "../fluido-parse//" }
mixer-ir = { path = "../mixer-ir/" }
